src/tests/snapshots/tera__tests__rendering__rendering_runtime_errors@unknown_field.txt.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/runtime_errors/unknown_field.txt
---
 Rendering error --> ["unknown_field.txt":1:8]
  |
1 | {{ name.unknown }}
  |         ^---
  = Tried to render a variable that is not defined
