src/tests/snapshots/tera__tests__rendering__rendering_runtime_errors@unknown_top_subscript.txt.snap
---
source: src/tests/rendering.rs
expression: "&err"
input_file: src/tests/rendering_inputs/runtime_errors/unknown_top_subscript.txt
---
 Rendering error --> ["unknown_top_subscript.txt":1:3]
  |
1 | {{ unknown[username] }}
  |    ^---
  = Container is not defined
